refactor : convertToDTO 서비스단으로 옮기는 작업